# jvm-class-builder

./: CMakeLists.txt  README.md  library.h
include/jvm/: attribute-code.h  attribute.h  class-file-element.h  class.h  constant-class.h  constant-double.h  constant-fieldref.h  constant-float.h  constant-integer.h  constant-interface-methodref.h  constant-long.h  constant-methodref.h  constant-name-and-type.h  constant-string.h  constant-utf-8-info.h  constant.h  descriptor-field.h  descriptor-method.h  descriptor.h  exception-handler.h  field.h  instruction-jump.h  instruction-value.h  instruction-with-constant.h  instruction.h  label.h  method.h
include/jvm/internal/: utils.h
java-internal/: pom.xml
java-internal/src/main/java/compilator/fix/: FixClass.java
src/: attribute-code.cpp  attribute.cpp  attribute.h  class.cpp  class.h  constant-class.cpp  constant-class.h  constant-double.cpp  constant-double.h  constant-fieldref.cpp  constant-fieldref.h  constant-float.cpp  constant-float.h  constant-integer.cpp  constant-integer.h  constant-interface-methodref.cpp  constant-interface-methodref.h  constant-long.cpp  constant-long.h  constant-methodref.cpp  constant-methodref.h  constant-name-and-type.cpp  constant-name-and-type.h  constant-string.cpp  constant-string.h  constant-utf-8-info.cpp  constant-utf-8-info.h  constant.cpp  constant.h  descriptor-field.cpp  descriptor-method.cpp  descriptor.cpp  exception-handler.cpp  field.cpp  instruction-jump.cpp  instruction-with-constant.cpp  instruction.cpp  label.cpp  method.cpp
src/internal/: utils.cpp
